--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/roboto": "^5.2.5",
     "@gsap/react": "^2.1.2",
     "gsap": "^3.12.7",
     "normalize.css": "^8.0.1",
